# RayTracer

./: .gitignore  CMakeLists.txt  README.md  TODO.md
assets/scenes/config/: all_primitives.cfg  box.cfg  checkered_spheres.cfg  cone.cfg  cone_cylinder.cfg  florian.cfg  lambertian_plane.cfg  perlin_sphere.cfg  plane_w_box.cfg  plane_w_denseity_box.cfg  scene_in_a_scene.cfg  spherebox.cfg  three_spheres.cfg
assets/scenes/screenshots/: basic_light.ppm  bouncing_spheres.ppm  checkered_spheres.ppm  cornell_box.ppm  duo_lights.ppm  earth_ball.ppm  fav_scene.ppm  material.ppm  perlin_sphere.ppm  plane_w_density_box.ppm  scene_in_a_scene.ppm  smoke.ppm  smoke_alt.ppm
doc/html/: ABuilder_8hpp_source.html  AMaterial_8hpp_source.html  ATexture_8hpp_source.html  BVHNode_8hpp_source.html  Box_8hpp_source.html  Builders_8hpp_source.html  Camera_8hpp_source.html  ChessBoard_8hpp_source.html  Color_8hpp_source.html  Cone_8hpp_source.html  Constants_8hpp_source.html  Core_8hpp_source.html  Cylinder_8hpp_source.html  Density_8hpp_source.html  Dielectric_8hpp_source.html  Diffuse_8hpp_source.html  Geometry_8hpp_source.html  HitRecord_8hpp_source.html  HittableList_8hpp_source.html  Hittable_8hpp_source.html  IBuilder_8hpp_source.html  IHittable_8hpp_source.html  IMaterial_8hpp_source.html  ITexture_8hpp_source.html  Image_8hpp_source.html  Intersection_8hpp_source.html  Interval_8hpp_source.html  Isotropic_8hpp_source.html  Lambertian_8hpp_source.html  Lights_8hpp_source.html  MaterialBuilder_8hpp_source.html  Material_8hpp_source.html  Math_8hpp_source.html  Metal_8hpp_source.html  Noise_8hpp_source.html  Parser_8hpp_source.html  Parsing_8hpp_source.html  Perlin_8hpp_source.html  PlaneBuilder_8hpp_source.html  Plane_8hpp_source.html  (+277 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_10.js  (+31 more)
doc/latex/: md_README.tex  md_TODO.tex  refman.tex
include/: Constants.hpp  Geometry.hpp  Math.hpp  Raytracer.hpp  Scene.hpp
include/Core/: Core.hpp  Hittable.hpp  Transformations.hpp
include/Rendering/: Lights.hpp  Material.hpp  Rendering.hpp  Texture.hpp
include/Utils/: Threading.hpp  Utils.hpp
include/Utils/Parsing/: Builders.hpp  Parsing.hpp
libs/: img_manager.cpp  img_manager.hpp
src/: attributes.cpp  main.cpp
src/Core/Hittable/: IHittable.hpp
src/Core/Intersection/: Intersection.cpp  Intersection.hpp
src/Core/Ray/: Ray.cpp  Ray.hpp
src/Geometry/Box/: Box.hpp
src/Geometry/Cone/: Cone.cpp  Cone.hpp
src/Geometry/Cylinder/: Cylinder.cpp  Cylinder.hpp
src/Geometry/Plane/: Plane.cpp  Plane.hpp
(+74 files in other folders)
